# fgruc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: lib.rs  math.rs  matrix.rs  matrix4x4.rs  types.rs
src/angles/: angle2.rs  euler.rs  mod.rs  quaternion.rs
src/rendering/: color.rs  mod.rs  vertex.rs
src/rotations/: euler.rs  mod.rs  quaternion.rs
src/vectors/: vector2.rs  vector3.rs  vector4.rs
